multitenancy/single-cp/1-purchase-history-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purchase-history-v1
  namespace: purchase-history-ns  
  labels:
    app: purchase-history-v1
spec:
  replicas: 1
  selector:
    matchLabels:
        app: purchase-history
        version: v1
  template:
    metadata:
      labels:
        app: purchase-history
        version: v1
      annotations:
    spec:
      serviceAccountName: purchase-history    
      containers:
      - name: purchase-history
        image: nicholasjackson/fake-service:v0.7.8
        ports:
        - containerPort: 8080
---
# Service to expose purchase-history-v1 frontend
apiVersion: v1
kind: Service
metadata:
  name: purchase-history
  namespace: purchase-history-ns  
spec:
  selector:
    app: purchase-history
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
