multitenancy/single-cp/4-sidecar-team-b.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: recommendation-ns
spec:
  egress:
  - hosts:
    - "recommendation-ns/*"
    - "purchase-history-ns/*"
    port:
      number: 8080
      protocol: HTTP
      name: egresshttp
  - hosts:
    - "istio-system/*"
