multitenancy/single-cp/3-web-api-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: web-api-viewer
 namespace: web-api-ns
spec:
 selector:
   matchLabels:
     app: web-api
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
   - operation:
       methods: ["GET"]
