multitenancy/single-cp/4-purchase-history-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: purchase-history-viewer
 namespace: purchase-history-ns
spec:
 selector:
   matchLabels:
     app: purchase-history
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/recommendation-ns/sa/recommendation"]
   to:
   - operation:
       methods: ["GET"]
