multitenancy/single-cp/4-recommendation-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: recommendation-viewer
 namespace: recommendation-ns
spec:
 selector:
   matchLabels:
     app: recommendation
 action: ALLOW
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/web-api-ns/sa/web-api","cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account"]
   to:
   - operation:
       methods: ["GET"]
